# P12_systeme_reco_agriculture

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
api/: algo_api.md  main.py  services.py
config/: config.py  paths.py
config/.ipynb_checkpoints/: paths-checkpoint.py
data/processed/: business_rules.json  climate_reference.csv  df_fao_consolidated.csv  df_fao_engineered.csv  soil_coefficients_audit.pkl
data/raw/crop_yield_prediction_dataset/clean/: area_code_mapping.csv  pesticides_clean.csv  rainfall_clean.csv  rendements_agro_clean.csv  rendements_fao_clean.csv  temp_clean.csv
models/: pipeline_champion_xgb.pkl  reference_climat.csv  trend_reference.csv
notebook/: 01_EDA_historiques.ipynb  01_Preparation_Donnees.ipynb  02_EDA_datasets_FAO.ipynb  02_EDA_datasets_FAO_clean.ipynb  02_Feature_Engineering.ipynb  03_Fusion_PCA.ipynb  03_Modelisation_MLflow.ipynb  03_Old_Hybrid_Model_Training.ipynb
notebook/.ipynb_checkpoints/: 02_EDA_datasets_FAO-checkpoint.ipynb  02_EDA_datasets_FAO_clean-checkpoint.ipynb
notebook/sandbox/: 01_EDA_historiques.ipynb  01_EDA_historiques_REFACTO.ipynb  02_EDA_datasets_FAO.ipynb  02_EDA_datasets_FAO_clean.ipynb  03_Old_Hybrid_Model_Training.ipynb  03_Preparation_Modelisation.ipynb  04_Test_Rapide_Modelisation_FAO.ipynb  05_POC_Fusion_France_Wheat.ipynb  Feature_Engineering_et_Preparation_Hybride.ipynb  Old_01_EDA_historiques.ipynb
scripts/: show_tree.py
tests/: test_api.py
