[project]
name = "p12-systeme-reco-agriculture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlflow>=3.8.1",
    "numpy>=2.4.0",
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "thefuzz>=0.22.1",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
